Upgrade project from Java 8 to Java 17
- Update maven.compiler.source/target from 1.8 to 17
- Uncomment Jakarta XML Bind API 4.0.0 and JAXB runtime dependencies
- Migrate javax.xml.bind imports to jakarta.xml.bind (Application.java, Address.java)
- Replace sun.misc.BASE64Encoder/Decoder with java.util.Base64
- Replace deprecated new Integer() constructor with Integer.valueOf()
- Replace Charset.forName("UTF-8") with StandardCharsets.UTF_8

Co-Authored-By: maallam <maallam@live.com>